# Docgen

./: .gitignore  CONTRIBUTING.md  Docgen.py  LICENSE  README.md  Toaster.sln  class_skeleton_test.toon  class_test.py  cli.py  llm_client.py  main.py  member_registry.py  method.py  parse_test.py  project_test.py  pyproject.toml  requirements.txt  toast.py
.github/ISSUE_TEMPLATE/: feature.md  refactor.md  task_assignment.md  test.md
.github/workflows/: tests.yml
Java/: DataProcessor.java  Java_Parser.py  java_class.py  java_field.py  java_file.py  java_method.py  member_registry.py
Languages/Agnostic/: Class.py  File.py  Method.py  __init__.py  models.py  parser.py
Languages/Java/: Java_Parser.py  __init__.py  java_class.py  java_field.py  java_file.py  java_method.py  language.py  models.py  parser.py  systemprompt.txt
TestCode/MRILib/: skeleton_test.toon
TestCode/MRILib/managers/: ArmBotFF.java
TestCode/MRILib/statemachine/: DriveFSM.java  _context.toon
TestProject/: DataProcessor.java
docs/: toast_reference.txt
src/toaster/: cli.py  commands.py  exceptions.py  mcp.py
src/toaster/.toaster/: cache.db  skeleton.toast
src/toaster/core/: __init__.py  builder.py  db.py  logger.py  models.py  parser.py  providers.py  registry.py  serializer.py
src/tostr/: cli.py  commands.py  mcp.py
tests/: test_java_class.py  test_java_project.py
tests/integration/: test_ast_pipeline.py  test_cli.py  test_dependencies.py
tests/unit/: test_builder_csharp.py  test_builder_java.py  test_models_csharp.py  test_models_java.py  test_serializer.py
(+46 files in other folders)
