[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toongen"
version = "0.1.0"
description = "AST scraper for LLM RAG"
dependencies = [
    "tree-sitter",
    "tree-sitter-java",
    "toons"
]

[project.scripts]
toongen = "cli:main"

[tool.setuptools]
py-modules = ["cli", "member_registry", "language", "queries"]

[tool.setuptools.packages.find]
where = ["."]
# Optional: explicitly include the Languages folder if you are having issues
include = ["Languages*"]