[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toaster"
version = "0.1.0"
description = "Token-Optimized AST Generator"
dependencies = [
    "tree-sitter",
    "tree-sitter-java",
    "google.genai",
    "pydantic",
    "typer",
    "watchfiles"
]

[project.scripts]
toaster = "toaster.cli:app"
