[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tostr"
version = "0.1.0"
description = "Token-Optimized Syntax Tree String IR Generator"
dependencies = [
    "tree-sitter",
    "tree-sitter-java",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "google.genai",
    "pydantic",
    "typer",
    "watchfiles",
    "loguru",
    "fastmcp"
]

[project.scripts]
tostr = "tostr.cli:app"
